2006-03-24  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in term/Makefile.am.in term/PostScript/*.ps
	term/post.trm (PS_common_init PS_dump_prologue_file):

	Install and maintain PostScript prologue and character encoding files
	in a separate directory, external to the gnuplot executable.  This
	removes a large chunk of text from the postscript driver, and allows
	local customization, editing, or patching of the postscript 
	configuration.  The directory in which these files are stored is taken
	from config.h:  #define GNUPLOT_PS_DIR
	but may be replaced at runtime by an environmental variable of the same
	name, or by a "set loadpath" command inside gnuplot.
	This change should result in no change to the postscript files output
	by gnuplot.

2006-03-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.h src/datafile.c: Allow an input field expected to be
	a time format to be in quotes. Previously anything in quotes was
	assumed to be invalid as a numerical value.

2006-03-23  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: New option "set style increment {user|default}"

	By default, successive plots within the same graph will use successive
	linetypes from the default set for the current terminal type.
	However, choosing the "user" option allows you to step through 
	user-defined linestyles rather than through the default line types.

	* src/gadgets.c src/gadgets.h: Global flag TBOOLEAN prefer_line_styles.

	* src/save.c src/set.c src/show.c src/tables.c src/tables.h:
	Save/set/show preference for line styles rather than linetypes.

	* src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots):
	If (prefer_lines_styles) then autoincrement successive plots by line
	style rather than linetype.

	* src/misc.c: Missing line style is non-fatal error.

2006-03-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse): Allow "bgnd" as shorthand for "lt -3".

2006-03-23  Daniel Sebald  <daniel.sebald@ieee.org>
